syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-encryption/api/proto/v1";

message DeleteEncryptedVaultRequest {
  string userId = 1;
  string deleteCode = 2;
}

message DeleteEncryptedVaultResponse {
  string message = 1;
}
