syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-encryption/api/proto/v1";

message GetEncryptedVaultKeyRequest {
  string userId = 1;
}

message GetEncryptedVaultKeyResponse {
  optional bytes encryptedPrivateKey = 1;
}
