syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-encryption/api/proto/v1";

message HasEncryptedVaultRequest {
  string userId = 1;
}

message HasEncryptedVaultResponse {
  bool hasEncryptedVault = 1;
}
